# mask_detection

./: .gitignore  .gitmodules  Dockerfile  PR.csv  README.md  app.py  blog_version.ipynb  blog_version_pt.2.ipynb  detector_choice.ipynb  main.py  polyaxongit.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  results.csv  workflow.ipynb
dataset/first_approach/tina_detections/: incorrect_mask.json  with_mask.json  without_mask.json
dataset/trial/: filenames.txt  ground_result.json  ground_result.txt  ground_truths.txt  result.json  result.txt
model/: model.py  preprocessing.py
models/: centerface.onnx  mask_detector.joblib  model.py  preprocessing.py
models/centerface/: centerface.py  centerface_results.json  demo.py
templates/: choose_app.html  stream.html  upload.html
