[tool.poetry]
name = "mask_detection"
version = "0.1.0"
description = "\"Mask detection model using openCV\""
authors = ["amrukwa"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7.1"
pandas = "^1.2.2"
scikit-learn = "^0.24.1"
opencv-python = "^4.5.1"
jupyter = "^1.0.0"
poetry = "^1.1.4"
matplotlib = "^3.3.4"
Flask = "^1.1.2"
Pillow = "^8.1.2"
jupyterlab-git = "^0.23.3"
jupyterlab = "^3.0.12"
numpy = "1.19.2"
jupytext = "^1.11.1"
jupyter-tensorboard = "^0.2.0"
dlib = "^19.22.0"
mtcnn = "^0.1.0"
Cython = "^0.29.22"
torch = "^1.8.1"
torchvision = "^0.9.1"
onnxruntime = "^1.7.0"
importlib = "^1.0.4"
seaborn = "^0.11.1"
insightface = "^0.1.5"
mxnet = "^1.8.0"
colorama = "^0.4.4"
onnx = "1.8.1"
onnx-tf = "^1.8.0"
facenet-pytorch = "^2.5.2"
gdown = "^3.12.2"
paddlepaddle-gpu = "^2.0.2"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
